--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.19.2",
     "currency.js": "^1.2.2",
     "formik": "^2.1.4",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0",
