--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "currency.js": "^1.2.2",
     "formik": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0",
+    "uuid": "^8.0.0",
     "yup": "^0.28.3"
   },
   "scripts": {
